# data-viz

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.claude/: settings.local.json
configs/: config_get_funda_data_first_time.py  config_get_wrds_mkt_data_first_time.py  run_pipeline_config.json
scripts/: feature_engineering.py  get_wrds_data_first_time.py  get_wrds_funda_data_first_time.py  tmp.py
src/data_viz/components/: __init__.py  bubble.py  galaxy.py  heatmap.py  network.py  regime.py  treemap.py
src/data_viz/dashboard/: factor_dashboard.py  intro_tab.py  market_overview.py  network_app.py  pm_app.py  volatility_heatmap.py
src/data_viz/data/: data.py  data_handler.py  factor_engine.py  regime_engine.py
src/data_viz/network/: network.py
src/data_viz/utils/: config.py
